Add Web UI with docs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - OLLAMA_URL=http://ollama:11434
     volumes:
       - ./data:/app/data
+      - ./app/static:/app/static
     restart: unless-stopped
 
   ollama:
